k8s/workload/ingress/app-ingress-pip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fsa
  namespace: app
  labels:
    app: fsa
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx/client_max_body_size: 10m
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fsa-fe
                port:
                  number: 80


          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: fsa-keycloak-http
                port:
                  number: 80



          # API endpoint for /lobbies
          - path: /lobbies
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080

          # API endpoint for /users
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080

          # API endpoint for /transactions
          - path: /transactions
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080

          # API endpoint for /duel-results
          - path: /duel-results
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080


          - path: /duel-winner
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080
