k8s/workload/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    nginx/client_max_body_size: 10m
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  rules:
    - host: fsa-prykhodko.northeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fsa-fe
                port:
                  number: 80
          - path: /discussion-messages
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: fsa-keycloak-http
                port:
                  number: 80
